# polymorfiq-graph-db

./: .gitignore  build.sh  deployed.wat  mod.rs  test.sh
.github/workflows/: release.yml  test.yml
lib/: Cargo.toml
lib/examples/language/: Cargo.toml
lib/examples/language/src/: main.rs
lib/src/: lib.rs
lib/src/base/: edge.rs  graph.rs  mod.rs  node.rs  refs.rs
lib/src/collections/: edge_list.rs  graph_list.rs  mod.rs  node_list.rs  refs.rs
lib/src/collections/alloc/: graph_list.rs  mod.rs
lib/src/macros/: mod.rs
wasm/: Cargo.toml
wasm/.cargo/: config
wasm/src/: main.rs  types.rs
