[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = false

[dependencies]
lib = { path = "../lib" }
wee_alloc = { version = "0.4.2", optional = true }

[features]
alloc = ["wee_alloc", "lib/alloc"]
default = []